add commented support for scss, woff, file loaders, css, default jQuery global plugin in webpack, added node libs, front page, refactoring of application structure, importing of scss

--- a/index.html
+++ b/index.html
@@ -4,19 +4,37 @@
 
 <head>
 
-    <script src="node_modules/systemjs/dist/system.js"></script>
-    <script>
-        var SystemJS = require('systemjs');
-
-        // loads './app.js' from the current directory
-        SystemJS.import('./js/main.ts').then(function (m) {
-            console.log(m);
-        });
-    </script>
+    <script src="dist/home-bundle.js"></script>
 </head>
 
 <body>
-    <div id="hello"></div>
+    <div class="container">
+        <form>
+            <div class="form-group">
+                <label for="exampleInputEmail1">Email address</label>
+                <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+            </div>
+            <div class="form-group">
+                <label for="exampleInputPassword1">Password</label>
+                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+            </div>
+            <div class="form-group">
+                <label for="exampleInputFile">File input</label>
+                <input type="file" id="exampleInputFile">
+                <p class="help-block">Example block-level help text here.</p>
+            </div>
+            <div class="checkbox">
+                <label>
+            <input type="checkbox"> Check me out
+            </label>
+            </div>
+            <button type="submit" class="btn btn-default">Submit</button>
+        </form>
+    </div>
+
+    <div id="Hi">
+        <h1>Hello</h1>
+    </div>
 </body>
 
 </html>
